# MJMLWarp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app_state.rs  handlers.rs  main.rs  models.rs  template_watcher.rs  tests.rs  utils.rs
templates/: test.mjml
