[package]
name = "mrml_template_renderer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrml" # Name of the binary to generate
path = "src/main.rs" # Path to the main binary file

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full", "test-util"] } # For asynchronous runtime
clap = { version = "4", features = ["derive"] }
notify = { version = "6.1.1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

warp = "0.3" # Web framework
handlebars = "4.3" # Handlebars template rendering
lru = "0.12.0"
mrml = "2"
select = "0.5" # HTML parser library
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For JSON parsing
hyper = "0.14"
